# kanbanpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  publish.yml  test.yml
kanbanpy/: __main__.py  board.py  cli.py  console.py  models.py  settings.py
kanbanpy/actions/: backup.py  clear.py  create.py  default.py  next_.py  prev.py  remove.py  setup.py
src/kanbanpy/: __init__.py  __main__.py  cli.py  models.py  storage.py
tests/: test_models.py  test_storage.py
