[metadata]
name = kanbanpy
version = 1.0.2
author = Óscar Miranda
author_email = oscarmiranda3615@gmail.com
url = https://github.com/OscarM3615/kanbanpy
description = A console-based Kanban task manager created in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kanban, project, management
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >= 3.7
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    kanbanpy = kanbanpy.__main__:main
